# robots

./: CMakeLists.txt  robots.pc.in  robots2dof.pc.in  robotsmanip.pc.in  robotsmanip2.pc.in
src/: AUVPropagator.cpp  ActionSpace.cpp  ContinuousActionSpace.cpp  ContinuousObservationSpace.cpp  ContinuousVectorActionSpace.cpp  DiscreteActionSpace.cpp  DiscreteObservationSpace.cpp  DiscreteVectorActionSpace.cpp  DubinPropagator.cpp  DubinRobot.cpp  Heuristic.cpp  Kinematics.cpp  ManipulatorPropagator.cpp  ManipulatorRobot.cpp  ObservationSpace.cpp  auv.cpp  build_model.py  build_model2.py  integrate.cpp  propagator.cpp  robot.cpp  uav.cpp
src/AUV/: AUVPropagator.cpp  auv.cpp
src/Airplane/: AirplaneIntegrator.cpp  AirplanePropagator.cpp
src/Dubin/: DubinPropagator.cpp  DubinRobot.cpp
src/Homecare/: Homecare.cpp
src/Manipulator/: Kinematics.cpp  ManipulatorIntegrator.cpp  ManipulatorIntegratorWAFR.cpp  ManipulatorPropagator.cpp  ManipulatorPropagatorLinear.cpp  ManipulatorRobot.cpp  ManipulatorRobotLinear.cpp
src/include/: AUVPropagator.hpp  ActionSpace.hpp  ContinuousActionSpace.hpp  ContinuousObservationSpace.hpp  DiscreteActionSpace.hpp  DiscreteObservationSpace.hpp  Distributions.hpp  DubinPropagator.hpp  DubinRobot.hpp  Integrator.hpp  ManipulatorPropagator.hpp  ManipulatorRobot.hpp  MultNormal.hpp  ObservationSpace.hpp  auv.hpp  integrate.hpp  mult_normal.hpp  propagator.hpp  robot.hpp  uav.hpp  utils.hpp
